<resources>
    <string name="app_name">Task</string>
    <string name="signin">SignIn</string>
    <string name="signup">SignUp</string>
    <string name="email_id">Email ID</string>
    <string name="password">Password</string>
    <string name="new_user_register_here">New User? Register Here</string>
    <string name="name">Name</string>
    <string name="mobile">Mobile</string>
    <string name="state">State</string>
    <string name="city">City</string>
    <string name="gener">Gener</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="mobilevalue">7845278465</string>
    <string name="users_not_available">Users Not Available</string>
    <string name="emailvalue">demo@gmail.com</string>
    <string name="do_you_want_to_logout">Do you want to Logout</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
</resources>