<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".view.activities.UserDetailsActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/yellow"
        android:theme="@style/ThemeOverlay.AppCompat.Dark"
        app:titleTextAppearance="@style/Toolbar.TitleText" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardColorLoyout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_10sdp"
        android:backgroundTint="@color/yellow"
        app:cardCornerRadius="@dimen/_5sdp"
        app:cardElevation="@dimen/_5sdp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:background="@color/white"
            android:orientation="vertical"
            android:padding="@dimen/_10sdp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/nameTxt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/name"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_15sdp" />

                <TextView
                    android:id="@+id/generTxt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_5sdp"
                    android:text="@string/female"
                    android:textSize="@dimen/_10sdp" />

            </LinearLayout>

            <TextView
                android:id="@+id/mobileTxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:text="@string/mobilevalue"
                android:textColor="@color/black"
                android:textSize="@dimen/_15sdp" />

            <TextView
                android:id="@+id/emailTxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:text="@string/emailvalue"
                android:textColor="@color/black"
                android:textSize="@dimen/_15sdp" />

            <TextView
                android:id="@+id/stateTxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:text="@string/state"
                android:textColor="@color/black"
                android:textSize="@dimen/_15sdp" />

            <TextView
                android:id="@+id/cityTxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:text="@string/city"
                android:textColor="@color/black"
                android:textSize="@dimen/_15sdp" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>


</LinearLayout>